Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -417,7 +417,158 @@ ENDMODULE.
 
 
 **1) Screen 100 `Layout` 설정**
-- screen 100 `Layout` 설정
+
 <img width="738" height="307" alt="image" src="https://github.com/user-attachments/assets/17c29bf5-c52d-48cb-a710-43ddc3b44549" />
 </br>
 </br>
+</br>
+
+**2) `TOP` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION2_TOP
+*&---------------------------------------------------------------------*
+PROGRAM SAPMZBC410_SOLUTION_03_01.
+
+TABLES: SDYN_CONN.
+
+DATA: exit_button TYPE C,
+      OK_CODE TYPE SY-UCOMM,
+      gs_data TYPE SDYN_CONN,
+      gv_subrc TYPE sy-subrc,
+      gs_data2 LIKE SDYN_CONN,
+      gv_button TYPE I.
+
+DATA: VIEW TYPE C VALUE 'X',
+      MAINTAIN_FLIGHTS TYPE C,
+      MAINTAIN_BOOKINGS TYPE C,
+      gv_title TYPE I.
+```
+</br>
+</br>
+
+**3) `PAI` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+
+  IF exit_button = 'X'.
+    LEAVE TO SCREEN 0.
+  ELSEIF exit_button = 'T'.
+    CALL SCREEN 150
+    STARTING AT 5 5
+    ENDING AT 50 10.
+    CLEAR: exit_button.
+  ENDIF.
+
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+*&      Module  CHECK_SFLIGHT  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE check_sflight INPUT.
+
+  CASE OK_CODE.
+    WHEN 'MODE'.
+      CASE 'X'.
+        WHEN VIEW.
+          gv_title = 1.
+        WHEN MAINTAIN_FLIGHTS.
+          gv_title = 2.
+        WHEN MAINTAIN_BOOKINGS.
+          gv_title = 3.
+        WHEN OTHERS.
+      ENDCASE.
+    WHEN 'PUSH'.
+      gv_button = 1.
+
+      SELECT SINGLE * FROM sflight
+        INTO CORRESPONDING FIELDS OF gs_data
+        WHERE carrid = SDYN_CONN-carrid
+          AND connid = SDYN_CONN-connid
+          AND fldate = SDYN_CONN-fldate.
+
+      IF sy-subrc <> 0.
+        gv_subrc = 4.
+        message text-007 TYPE 'I'.
+      ENDIF.
+    WHEN OTHERS.
+  ENDCASE.
+
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0150  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0150 INPUT.
+  IF OK_CODE = 'BTN01'.
+    LEAVE TO SCREEN 0.
+  ENDIF.
+ENDMODULE.
+```
+</br>
+</br>
+
+**4) `PBO` 모듈 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION2_O01
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+
+  SET PF-STATUS 'S100'.
+
+  IF gv_title = 1.
+    SET TITLEBAR 'T100' WITH 'View'.
+  ELSEIF gv_title = 2.
+    SET TITLEBAR 'T100' WITH 'Maintain flights'.
+    LOOP AT SCREEN.
+      IF screen-name = 'SDYN_CONN-PLANETYPE'.
+        screen-input = 1.
+      ENDIF.
+      MODIFY SCREEN.
+    ENDLOOP.
+  ELSEIF gv_title = 3.
+    SET TITLEBAR 'T100' WITH 'Maintain bookings'.
+  ENDIF.
+
+  IF gv_button = 1.
+    IF gv_subrc <> 0.
+      CLEAR SDYN_CONN.
+      gv_subrc = 0.
+    ELSE.
+      MOVE-CORRESPONDING gs_data TO SDYN_CONN.
+    ENDIF.
+  ELSE.
+    gv_button = 0.
+  ENDIF.
+
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module CLEAR_OK_CODE OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE clear_ok_code OUTPUT.
+  CLEAR: OK_CODE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module STATUS_0150 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0150 OUTPUT.
+ SET PF-STATUS 'S150'.
+ SET TITLEBAR 'xxx'.
+ENDMODULE.
+```
