--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -257,7 +257,18 @@ ENDMODULE.
 
 - 라디오 버튼끼리 그룹 지정 가능
 - 그룹 지정시 라디오버튼을 그룹 중 하나만 선택 가능하게 됨
-  
+- `OK_CODE` 없이 바로 라디오버튼 체크 가능
+```abap
+CASE 'X'.
+  WHEN view.
+    gv_title = 1.
+  WHEN maintain_flights.
+    gv_title = 2.
+  WHEN maintain_bookings.
+    gv_title = 3.
+ENDCASE.
+```
+
 <img width="1057" height="656" alt="image" src="https://github.com/user-attachments/assets/5e908ecf-ff2d-4cb0-983f-365de9f523f0" />
 </br>
 </br>
