Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -6,7 +6,7 @@
 - **`SCREEN-INPUT`** 같은 화면 속성 변경은 **`PBO`** 에서만
 - 사용자 입력 기반 SELECT는 **`PAI`** , 조회 결과 화면 반영/속성 변경은 **`PBO`**
 - **OK_CODE 초기화** 코드 꼭 넣어줘야 함 ( 보통 **`PBO`** 에서)
-- **OK_CODE** 케이스문은 **PAI** 에서
+- **`OK_CODE`** 케이스문은 **`PAI`** 에서
 ```abap
 MODULE clear_ok_code OUTPUT.
   CLEAR: OK_CODE.
