Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -1,3 +1,30 @@
+## < MESSAGE TYPE 종류 >
+
+**1) TYPE 'A' (Abort)**
+- 치명적인 오류 발생 시 사용
+- 메시지 출력 후 프로그램이 즉시 종료됨
+```abap
+MESSAGE '치명적 오류 발생' TYPE 'A'.
+```
+</br>
+</br>
+
+**2) X TYPE**
+**3) E TYPE**
+**4) W TYPE**
+**5) I TYPE**
+**6) S TYPE**
+
+
+
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
 ## < Icon Field >
 - SAP에서 제공하는 아이콘을 저장하기 위한 데이터 타입
 ```abap
