Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -8,13 +8,55 @@ MESSAGE '치명적 오류 발생' TYPE 'A'.
 ```
 </br>
 
-**2) X TYPE**
-**3) E TYPE**
-**4) W TYPE**
-**5) I TYPE**
-**6) S TYPE**
+### 2) TYPE 'X' (Exit)
+- 시스템 오류 메시지
+- 출력과 동시에 Short Dump 발생
+```abap
+MESSAGE '시스템 오류 발생' TYPE 'X'.
+```
+</br>
 
+### 3) TYPE 'E' (Error)
+- 오류 메시지 출력
+- 현재 화면에 머물며 다음 단계로 진행 불가
+```abap
+MESSAGE '입력값 오류입니다' TYPE 'E'.
+```
+</br>
 
+### 4) TYPE 'W' (Warning)
+- 경고 메시지 출력
+- Enter를 누르면 처리가 계속 진행됨
+```abap
+MESSAGE '주의가 필요합니다' TYPE 'W'.
+```
+</br>
+
+### 5) TYPE 'I' (Information)
+- 정보 메시지 출력
+- 팝업 창으로 표시됨
+```abap
+MESSAGE '안내 메시지입니다' TYPE 'I'.
+```
+</br>
+
+### 6) TYPE 'S' (Success)
+- 성공 메시지 출력
+- 화면 하단 상태바에 표시됨
+```abap
+MESSAGE '정상 처리되었습니다' TYPE 'S'.
+```
+</br>
+
+### 7) DISPLAY LIKE 사용
+- 메시지의 실제 동작(TYPE)은 그대로 유지하면서 화면에 보이는 표시 형태만 변경하는 옵션
+```abap
+MESSAGE '<메시지 내용>' TYPE '<실제타입>' DISPLAY LIKE '<표시타입>'.
+```
+- 메시지 동작은 E 타입, 표시 모양만 S 타입으로 보여줌
+```abap
+MESSAGE '오류이지만 성공처럼 표시' TYPE 'E' DISPLAY LIKE 'S'.
+```
 
 </br>
 </br>
