Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -75,6 +75,10 @@ DATA: <icon_field> TYPE ICONS-TEXT.
 DATA: iconfield1 TYPE ICONS-TEXT,
       iconfield2 TYPE ICONS-TEXT.
 ```
+
+- `/oicon` 으로 아이콘 볼 수 있음
+<img width="268" height="81" alt="image" src="https://github.com/user-attachments/assets/fe1f0051-1c41-45f6-8cd2-0bd880d10115" />
+
 </br>
 </br>
 </br>
