--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -1,4 +1,9 @@
 ## < MESSAGE TYPE 종류 >
+</br>
+
+<img width="612" height="422" alt="image" src="https://github.com/user-attachments/assets/22053e61-5e42-4f77-8d96-e692fa60d53e" />
+</br>
+</br>
 
 ### 1) TYPE 'A' (Abort)
 - 치명적인 오류 발생 시 사용
