--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -662,3 +662,13 @@ MODULE status_0150 OUTPUT.
  SET TITLEBAR 'xxx'.
 ENDMODULE.
 ```
+</br>
+</br>
+
+**5) 결과 확인**
+
+<img width="607" height="277" alt="image" src="https://github.com/user-attachments/assets/d0bb79eb-a9ef-4b8f-80d3-65a332a3e71a" />
+</br>
+</br>
+</br>
+</br>
