Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -288,7 +288,7 @@ ENDMODULE.
 </br>
 
 **7) 결과 확인**
-
+- 아이콘 변경 버튼 클릭시 아이콘 바뀜
 <img width="538" height="443" alt="image" src="https://github.com/user-attachments/assets/ed54eb70-b443-4760-a6f8-5a003bf65f0e" />
 
 </br>
