--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -1,2 +1,10 @@
+## <  핵심 개념 >
+- **`LEAVE TO SCREEN 0`** 같은 화면 전환 명령은 **`PAI`** 에서만
+- **`SCREEN-INPUT`** 같은 화면 속성 변경은 **`PBO`** 에서만
+- 사용자 입력 기반 SELECT는 **`PAI`** , 조회 결과 화면 반영/속성 변경은 **`PBO`**
+- **OK_CODE 초기화** 코드 꼭 넣어줘야 함 ( 보통 **`PBO`** 에서)
+- **`OK_CODE`** 케이스문은 **`PAI`** 에서
+- **`FIELD / CHAIN`**은 무조건 **PAI**에서만 사용함
+
 ## < PAI FIELD / CHAIN 입력 체크 방식 >
 ### 1) 기본형 (옵션 없음) – 항상 실행
