--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -6,10 +6,17 @@
 - **`OK_CODE`** 케이스문은 **`PAI`** 에서
 - **`FIELD / CHAIN`** 은 무조건 **PAI** 에서만 구현
 </br>
+
+- FIELD / CHAIN 입력 체크 방식
+
+</br>
 </br>
 
 ## < PAI FIELD / CHAIN 입력 체크 방식 >
 - **`FIELD / CHAIN`** 은 무조건 **PAI** 에서만 구현
 </br>
+
+- PAI 발생 시 무조건 MODULE 실행
+- 값 입력 여부, 변경 여부 모두 무관
 
 ### 1) 기본형 (옵션 없음) – 항상 실행
