--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -16,7 +16,35 @@
 - **`FIELD / CHAIN`** 은 무조건 **PAI** 에서만 구현
 </br>
 
+### 1) 기본형 (옵션 없음) – 항상 실행
 - PAI 발생 시 무조건 MODULE 실행
 - 값 입력 여부, 변경 여부 모두 무관
+- **단일값 체크 (FIELD)**
+```abap
+FIELD <field> MODULE <module>.
+```
+```abap
+FIELD SCARR-CARRID MODULE CHECK_INPUT.
+```
+- **다중값 체크 (CHAIN)**
+```abap
+CHAIN.
+  FIELD: <field1>, <field2>.
+  MODULE <module>.
+ENDCHAIN.
+```
+```abap
+CHAIN.
+  FIELD: SDYN_CONN-CARRID, SDYN_CONN-CONNID.
+  MODULE CHECK_INPUTS.
+ENDCHAIN.
+```
+</br>
+</br>
 
-### 1) 기본형 (옵션 없음) – 항상 실행
+### 2) 입력값 존재 기준 (ON INPUT / ON CHAIN-INPUT)
+- 값이 입력된 경우에만 MODULE 실행
+- 값이 비어 있으면 실행 안 됨
+- 다중 값 체크 시 CHAIN 내 하나라도 값이 있으면 실행 (OR 조건)
+- **단일값 체크 (ON INPUT)**
+```abap
