Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -46,7 +46,54 @@ ENDCHAIN.
 
 ### 2) 입력값 존재 기준 (ON INPUT / ON CHAIN-INPUT)
 - 값이 입력된 경우에만 MODULE 실행
-- 값이 비어 있으면 실행 안 됨
 - 다중 값 체크 시 CHAIN 내 하나라도 값이 있으면 실행 (OR 조건)
+</br>
+
 - **단일값 체크 (ON INPUT)**
 ```abap
+FIELD <field> MODULE <module> ON INPUT.
+```
+```abap
+FIELD SCARR-CARRID MODULE CHECK_INPUT ON INPUT.
+```
+- **다중값 체크 (ON CHAIN-INPUT)**
+```abap
+CHAIN.
+  FIELD: <field1>, <field2>.
+  MODULE <module> ON CHAIN-INPUT.
+ENDCHAIN.
+```
+```abap
+CHAIN.
+  FIELD: SDYN_CONN-CARRID, SDYN_CONN-CONNID.
+  MODULE CHECK_INPUTS ON CHAIN-INPUT.
+ENDCHAIN.
+```
+</br>
+</br>
+
+### 3) 값 변경 기준 (ON REQUEST / ON CHAIN-REQUEST)
+- 이전 값과 비교하여 변경되었을 때만 MODULE 실행
+- 다중 값 체크 시 CHAIN 내 하나라도 값이 변경되면 실행
+</br>
+
+- **단일값 체크 (ON REQUEST)**
+```abap
+FIELD <field> MODULE <module> ON REQUEST.
+```
+```abap
+FIELD SCARR-CARRID MODULE CHECK_INPUT ON REQUEST.
+```
+- **다중값 체크 (ON CHAIN-REQUEST)**
+```abap
+CHAIN.
+  FIELD: <field1>, <field2>.
+  MODULE <module> ON CHAIN-REQUEST.
+ENDCHAIN.
+```
+```abap
+CHAIN.
+  FIELD: SDYN_CONN-CARRID, SDYN_CONN-CONNID.
+  MODULE CHECK_INPUTS ON CHAIN-REQUEST.
+ENDCHAIN.
+```
