Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -11,6 +11,9 @@
 ```abap
 MESSAGE '치명적 오류 발생' TYPE 'A'.
 ```
+<img width="697" height="231" alt="image" src="https://github.com/user-attachments/assets/78049bd1-bafb-4fcd-95d9-3c2a35c92871" />
+
+</br>
 </br>
 
 ### 2) TYPE 'X' (Exit)
