Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -13,7 +13,6 @@ MESSAGE '치명적 오류 발생' TYPE 'A'.
 ```
 <img width="614" height="204" alt="image" src="https://github.com/user-attachments/assets/466b8c58-e9db-4c63-abaf-dab17e299283" />
 
-
 </br>
 </br>
 </br>
@@ -24,6 +23,10 @@ MESSAGE '치명적 오류 발생' TYPE 'A'.
 ```abap
 MESSAGE '시스템 오류 발생' TYPE 'X'.
 ```
+<img width="409" height="330" alt="image" src="https://github.com/user-attachments/assets/7972ecc4-fa92-4c5d-bb7d-8e37987477b2" />
+
+</br>
+</br>
 </br>
 
 ### 3) TYPE 'E' (Error)
