Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -35,6 +35,9 @@ MESSAGE '시스템 오류 발생' TYPE 'X'.
 ```abap
 MESSAGE '입력값 오류입니다' TYPE 'E'.
 ```
+<img width="233" height="50" alt="image" src="https://github.com/user-attachments/assets/ddf4ff77-2521-44eb-995c-b787a54e435b" />
+</br>
+</br>
 </br>
 
 ### 4) TYPE 'W' (Warning)
