Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -46,6 +46,10 @@ MESSAGE '입력값 오류입니다' TYPE 'E'.
 ```abap
 MESSAGE '주의가 필요합니다' TYPE 'W'.
 ```
+<img width="220" height="44" alt="image" src="https://github.com/user-attachments/assets/94150f34-68d1-4055-918c-0b837232cb3a" />
+
+</br>
+</br>
 </br>
 
 ### 5) TYPE 'I' (Information)
