Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -67,6 +67,9 @@ MESSAGE '안내 메시지입니다' TYPE 'I'.
 ```abap
 MESSAGE '정상 처리되었습니다' TYPE 'S'.
 ```
+<img width="206" height="44" alt="image" src="https://github.com/user-attachments/assets/cadb4bb8-7bbf-439e-8606-66c6b27b3d58" />
+</br>
+</br>
 </br>
 
 ### 7) DISPLAY LIKE 사용
