Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -1,7 +1,4 @@
-## < MESSAGE TYPE 종류 >
-</br>
-
-</br>
+<img width="225" height="46" alt="image" src="https://github.com/user-attachments/assets/711ba9f9-033f-4dd3-b82a-bb18759b37dd" />## < MESSAGE TYPE 종류 >
 </br>
 
 ### 1) TYPE 'A' (Abort)
@@ -79,9 +76,17 @@ MESSAGE '<메시지 내용>' TYPE '<실제타입>' DISPLAY LIKE '<표시타입>'
 ```
 - 메시지 동작은 E 타입, 표시 모양만 S 타입으로 보여줌
 ```abap
-MESSAGE '오류이지만 성공처럼 표시' TYPE 'E' DISPLAY LIKE 'S'.
+MESSAGE 'I타입 메세지입니다.' TYPE 'I' DISPLAY LIKE 'S'.
 ```
+<img width="483" height="143" alt="image" src="https://github.com/user-attachments/assets/f00c3f74-380b-4dae-917a-6798c78c18fa" />
+</br>
+</br>
 
+```abap
+MESSAGE 'E타입 메세지입니다.' TYPE 'E' DISPLAY LIKE 'S'.
+```
+<img width="225" height="46" alt="image" src="https://github.com/user-attachments/assets/f49a1573-bcd5-4cd6-9b0c-d553f983aeb8" />
+</br>
 </br>
 </br>
 </br>
