--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -125,6 +125,14 @@ DATA: iconfield1 TYPE ICONS-TEXT,
 
 ### < Icon Field 를 이용한  예제 >
 </br>
+</br>
+
+- 문제
+
+<img width="453" height="294" alt="image" src="https://github.com/user-attachments/assets/343c3b1a-33c2-4845-9ab1-faaf80c25e02" />
+</br>
+</br>
+</br>
 
 **1) `Icon` 이용한 Layout 설정**
 
