Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -320,7 +320,7 @@ ENDMODULE.
 </br>
 
 **7) 결과 확인**
-- 아이콘 변경 버튼 클릭시 아이콘 바뀜
+- 아이콘 변경 버튼 클릭시 체크 아이콘으로 바뀜 ( 다시 누르면 원래대로 바뀜 )
 <img width="538" height="443" alt="image" src="https://github.com/user-attachments/assets/ed54eb70-b443-4760-a6f8-5a003bf65f0e" />
 
 </br>
@@ -409,13 +409,6 @@ ENDCASE.
 ### 실습 1
 </br>
 
-- 문제
-
-<img width="453" height="294" alt="image" src="https://github.com/user-attachments/assets/343c3b1a-33c2-4845-9ab1-faaf80c25e02" />
-</br>
-</br>
-</br>
-</br>
 
 **1) Screen 100 `Layout` 설정**
 - `Foreign Key Check` 해제해야 오류 Message 가 안뜸
