Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -693,7 +693,7 @@ ENDMODULE.
 </br>
 
 **5) 결과 확인**
-
+- 라디오 버튼 클릭에 따라 타이틀이 바뀌고 `Maintain flights` 클릭 시 `Plane type` 인풋이 가능
 <img width="607" height="277" alt="image" src="https://github.com/user-attachments/assets/d0bb79eb-a9ef-4b8f-80d3-65a332a3e71a" />
 </br>
 </br>
