Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -1,4 +1,4 @@
-<img width="225" height="46" alt="image" src="https://github.com/user-attachments/assets/711ba9f9-033f-4dd3-b82a-bb18759b37dd" />## < MESSAGE TYPE 종류 >
+## < MESSAGE TYPE 종류 >
 </br>
 
 ### 1) TYPE 'A' (Abort)
