Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -1,3 +1,15 @@
+## <  핵심 개념 >
+</br>
+
+- **1) MESSAGE TYPE 종류**
+- **2) Icon Field 사용 ( `ICON_CREATE` 함수 불러오기 )**
+- **3) `Listbox` (드롭다운) = 여러 값 중 하나를 선택**
+- **4)  라디오버튼 및 체크박스 ( Radio button / Check box )**
+- **5) 버튼에 아이콘을 같이 띄우기** 
+
+</br>
+</br>
+
 ## < ABAP 개념 >
 </br>
 
