Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -96,6 +96,7 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 
 
 ### 4) STARTING AT / ENDING AT
+- dialog 크기 지정하는 함수
 - `CALL SCREEN` 과 함께 사용됨
 - `STARTING AT col row` : 화면의 왼쪽 위 시작 위치
 - `ENDING AT col row` : 화면의 오른쪽 아래 끝 위치
