Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -488,6 +488,20 @@ MODULE user_command_0200 INPUT.
 ENDMODULE.
 ```
 </br>
+
+**6) 결과 확인**
+- 입력 후 엔터
+<img width="324" height="239" alt="image" src="https://github.com/user-attachments/assets/ec51fa6f-cab5-4a2a-91cd-9e817fb0072d" />
+
+</br>
+</br>
+
+- 입력한 값에 따라 출력
+<img width="373" height="351" alt="image" src="https://github.com/user-attachments/assets/2fabeebc-ec21-4cef-8bb2-33381df28731" />
+
+</br>
+</br>
+</br>
 </br>
 </br>
 
