Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -661,11 +661,12 @@ ENDMODULE.
 </br>
 
 **6) 결과확인**
-
+- 필수 값 입력 후 `T` 입력 후 엔터
 <img width="531" height="375" alt="image" src="https://github.com/user-attachments/assets/ae634ba6-75e7-4a91-bd2a-c6e9cdb1094b" />
 </br>
 </br>
 
+- 다이얼로그 창 생성
 <img width="534" height="376" alt="image" src="https://github.com/user-attachments/assets/50a3e05b-2c85-4084-a8ca-3fd02f4e4602" />
 </br>
 </br>
