Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -666,7 +666,7 @@ ENDMODULE.
 </br>
 </br>
 
-- 다이얼로그 창 생성 ( 시간이 띄워짐 )
+- 다이얼로그 창 띄워짐 ( 시간이 띄워짐 )
 <img width="534" height="376" alt="image" src="https://github.com/user-attachments/assets/50a3e05b-2c85-4084-a8ca-3fd02f4e4602" />
 </br>
 </br>
