--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -1,3 +1,14 @@
+## <  핵심 개념 >
+</br>
+
+- **1) `SET CURSOR FIELD` - 특정 화면 필드에 포커스를 이동시킴**
+- **2) Function Key / Function type 설정하기 ( PF-STATUS - PBO에서 설정 )**
+- **3) Titlebar ( all title )**
+- **4) `STARTING AT / ENDING AT` - dialog 크기 지정하는 함수 ( CALL SCREEN 과 함께 사용 )**
+
+</br>
+</br>
+
 ## < ABAP 개념 및 문법 >
 </br>
 
