Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -401,7 +401,7 @@ ENDMODULE.
 </br>
 
 **10) 결과 확인**
-
+- 버튼 클릭시 필드 입력 여부가 바뀜
 <img width="465" height="316" alt="image" src="https://github.com/user-attachments/assets/32e64b3d-0c48-4144-8e58-5e6b3a007644" />
 
 </br>
