Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -535,6 +535,19 @@ MODULE status_0100 OUTPUT.
 ENDMODULE.
 ```
 </br>
+
+**7) 결과 확인**
+- `PUSH` 버튼 클릭 시
+<img width="479" height="321" alt="image" src="https://github.com/user-attachments/assets/0f50c4f5-2a6d-4335-827e-cf6d8c4b1b2b" />
+</br>
+</br>
+
+- 버튼 클릭 시 결과 생성
+<img width="481" height="344" alt="image" src="https://github.com/user-attachments/assets/6a103613-7bfb-4107-960a-b531b605849e" />
+
+</br>
+</br>
+</br>
 </br>
 </br>
 
