Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -17,6 +17,7 @@
 
 ## < PAI FIELD / CHAIN 입력 체크 방식 >
 - **`FIELD / CHAIN`** 은 무조건 **PAI** 에서만 구현
+- 화면에 입력된 값을 기준으로 검증하기 위해 사용
 </br>
 
 ### 1) 기본형 (옵션 없음) – 항상 실행
