--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -1,10 +1,11 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) `SET CURSOR FIELD` - 특정 화면 필드에 포커스를 이동시킴**
-- **2) Function Key / Function type 설정하기 ( PF-STATUS - PBO에서 설정 )**
-- **3) Titlebar ( all title )**
-- **4) `STARTING AT / ENDING AT` - dialog 크기 지정하는 함수 ( CALL SCREEN 과 함께 사용 )**
+- **1) SCREEN 필드 속성 제어 ( `SCREEN-INVISIBLE` , `SCREEN-INPUT` )**
+- **2) 그룹(Group1, Group2 등) 속성 활용 → `IF screen-group1 = 'GRP1'.`**
+- **3) `LOOP AT screen.` ( `MODIFY SCREEN` 필수 )**
+- **4) Dynpro 스크린 제어 ( `SET SCREEN` , `CALL SCREEN` , `LEAVE SCREEN` , `LEAVE TO SCREEN` )**
+- **5) 버튼 생성 후 속성 창에서 `FctCode` 필드 입력 ( 펑션코드 )**
 
 </br>
 </br>
