Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -745,6 +745,27 @@ MODULE status_0100 OUTPUT.
 ENDMODULE.
 ```
 </br>
+
+**6) 결과 확인**
+- `검색` 누르면 전체 출력 ( Inner Join 사용 )
+  
+<img width="467" height="494" alt="image" src="https://github.com/user-attachments/assets/36b2b3a5-6453-437a-8a8b-06a54a9f846a" />
+</br>
+</br>
+
+- `SCARR` 누르면 해당 데이터 출력
+
+<img width="473" height="432" alt="image" src="https://github.com/user-attachments/assets/6687403b-b8dc-453f-98b5-6f41d04c1c01" />
+</br>
+</br>
+
+- `SFLIGHT` 누르면 해당 데이터 출력
+  
+<img width="476" height="480" alt="image" src="https://github.com/user-attachments/assets/71fcff73-4f33-4d7f-bb87-9ec2993efbbf" />
+
+</br>
+</br>
+</br>
 </br>
 </br>
 
