Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -631,7 +631,8 @@ ENDMODULE.
 </br>
 
 **7) 결과 확인**
-
+- 입력 값 입력 후에 엔터 치면 결과 출력, `X` 입력 후 엔터 치면 뒤로가기
+  
 <img width="307" height="195" alt="image" src="https://github.com/user-attachments/assets/04c34b4c-cc6d-4cbc-bb71-fea1538821d4" />
 
 </br>
