--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -635,6 +635,10 @@ ENDMODULE.
 - 입력 값 입력 후에 엔터 치면 테이블 출력
   
 <img width="307" height="195" alt="image" src="https://github.com/user-attachments/assets/04c34b4c-cc6d-4cbc-bb71-fea1538821d4" />
+</br>
+</br>
+
+<img width="403" height="388" alt="image" src="https://github.com/user-attachments/assets/1a9e35ea-328f-4eb2-aeda-649ff7ae24e5" />
 
 </br>
 </br>
