--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -1,11 +1,8 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) SCREEN 필드 속성 제어 ( `SCREEN-INVISIBLE` , `SCREEN-INPUT` )**
-- **2) 그룹(Group1, Group2 등) 속성 활용 → `IF screen-group1 = 'GRP1'.`**
-- **3) `LOOP AT screen.` ( `MODIFY SCREEN` 필수 )**
-- **4) Dynpro 스크린 제어 ( `SET SCREEN` , `CALL SCREEN` , `LEAVE SCREEN` , `LEAVE TO SCREEN` )**
-- **5) 버튼 생성 후 속성 창에서 `FctCode` 필드 입력 ( 펑션코드 )**
+- **1) module pool program 생성 방법 ( 일반 프로그램 생성 방법에서 include 파일 포함 )**
+- **2) 모듈풀 프로그램은 무조건 `TCODE` 생성해야 함**
 
 </br>
 </br>
