--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -1,7 +1,7 @@
 ## <  핵심 개념 >
 </br>
 
-- **1) module pool program 생성 방법 ( 일반 프로그램 생성 방법에서 include 파일 포함 )**
+- **1) `module pool program` 생성 방법 ( 일반 프로그램 생성 방법에서 include 파일 포함 )**
 - **2) 모듈풀 프로그램은 무조건 `TCODE` 생성해야 함**
 
 </br>
