Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -79,6 +79,7 @@ ENDCHAIN.
 ### 3) 값 변경 기준 (ON REQUEST / ON CHAIN-REQUEST)
 - 이전 값과 비교하여 변경되었을 때만 MODULE 실행
 - 다중 값 체크 시 CHAIN 내 하나라도 값이 변경되면 실행
+- 값의 존재 여부와 무관하게, 이전 값과 달라지기만 하면 실행 ( 값이 있다가 빈 값이어도 실행 )
 </br>
 
 - **단일값 체크 (ON REQUEST)**
