Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -12,6 +12,7 @@
 - **`OK_CODE`** 케이스문은 **`PAI`** 에서
 - LOOP AT SCREEN 사용시 **`MODIFY SCREEN`** 넣기
 - **`FIELD / CHAIN`** 은 무조건 **PAI** 에서만 구현
+- **`AT EXIT-COMMAND`** 은 무조건 **PAI** 에서만 구현
 
 </br>
 
@@ -106,3 +107,54 @@ CHAIN.
   MODULE CHECK_INPUTS ON CHAIN-REQUEST.
 ENDCHAIN.
 ```
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < AT EXIT-COMMAND >
+- **`AT EXIT-COMMAND`** 은 무조건 **PAI** 에서만 구현
+- 사용자가 **종료·취소·뒤로가기** 와 같은 종료 명령을 선택했을 때만 실행되는 PAI 구문
+- 검증 오류로 진행이 불가능할 때 안전하게 화면을 종료하기 위해 사용
+</br>
+
+**1) `Function Type` 설정**
+- `EXIT` , `CANCEL` 일 때 `Function Type` 을 `E` 로 설정
+
+<img width="719" height="356" alt="image" src="https://github.com/user-attachments/assets/891c927b-5aa9-4623-91ab-281736ecfa3c" />
+</br>
+</br>
+</br>
+
+**2) `PAI` 모듈 생성**
+- Screen 코드에서 모듈 생성
+```abap
+PROCESS AFTER INPUT.
+  MODULE <module_name> AT EXIT-COMMAND.
+```
+```abap
+PROCESS AFTER INPUT.
+  MODULE EXIT AT EXIT-COMMAND.
+```
+- 해당 PAI 모듈에서 코드 작성
+```abap
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM. " 프로그램 종료
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0. " 스크린 종료
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+</br>
+
+**3) 결과 확인**
+- `EXIT` , `CANCEL` 누르면 에러가 나도 빠져나올 수 있음 ( `BACK` 은 불가능 )
+
+<img width="711" height="470" alt="image" src="https://github.com/user-attachments/assets/9369b4a7-731b-44a0-8cbb-7271f4ded069" />
