Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -124,8 +124,8 @@ ENDCHAIN.
 
 ## < AT EXIT-COMMAND >
 - **`AT EXIT-COMMAND`** 은 무조건 **PAI** 에서만 구현
-- 사용자가 **종료·취소·뒤로가기** 와 같은 종료 명령을 선택했을 때만 실행되는 PAI 구문
-- 검증 오류로 진행이 불가능할 때 안전하게 화면을 종료하기 위해 사용
+- PF-STATUS에서 Function Type = E(Exit) 로 정의된 커맨드만 대상으로 동작함
+- 메시지 E로 화면 진행이 막힌 상태에서, 사용자가 “종료”를 선택했을 때 빠져나가기 위한 용도
 </br>
 </br>
 
