Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -113,6 +113,10 @@ ENDCHAIN.
 
 ## < PAI FIELD / CHAIN 예제 >
 
+**1) `Layout` 설정**
+<img width="694" height="329" alt="image" src="https://github.com/user-attachments/assets/2f25d547-92f2-45aa-a369-dcc207fcf7da" />
+</br>
+</br>
 
 </br>
 </br>
