Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -112,6 +112,7 @@ ENDCHAIN.
 </br>
 
 ## < PAI FIELD / CHAIN 예제 >
+</br>
 
 **1) `Layout` 설정**
 
@@ -119,6 +120,81 @@ ENDCHAIN.
 
 </br>
 </br>
+
+**2) `Screen` 코드에서 모듈 생성 ( PAI, PBO )**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE INIT_DATA.
+*
+PROCESS AFTER INPUT.
+  MODULE EXIT AT EXIT-COMMAND.
+
+**********************************************************************
+
+* FIELD SCARR-CARRID MODULE CHECK_INPUT. " 단일값 체크
+*
+* CHAIN. " 다중값 체크
+*  FIELD: SDYN_CONN-CARRID, SDYN_CONN-CONNID.
+*  MODULE CHECK_INPUTS.
+* ENDCHAIN.
+
+**********************************************************************
+
+*  " 단일값 체크 : ON INPUT 값이 있을때만 체크하도록 설정
+*  FIELD SCARR-CARRID MODULE CHECK_INPUT ON INPUT.
+*
+*  " 다중값 체크 : ON CHAIN-INPUT 값이 있을때만 체크하도록 설정
+*  CHAIN.
+*    FIELD: SDYN_CONN-CARRID, SDYN_CONN-CONNID.
+*    MODULE CHECK_INPUTS ON CHAIN-INPUT.
+*  ENDCHAIN.
+* MODULE USER_COMMAND_0100.
+
+**********************************************************************
+
+   " 단일값 체크 : ON REQUEST 값이 변경되었을 때 체크하도록 설정
+  FIELD SCARR-CARRID MODULE CHECK_INPUT ON REQUEST.
+
+  " 다중값 체크 : ON CHAIN-REQUEST 값이 변경되었을 때만 체크하도록 설정
+  CHAIN.
+    FIELD: SDYN_CONN-CARRID, SDYN_CONN-CONNID.
+    MODULE CHECK_INPUTS ON CHAIN-REQUEST.
+  ENDCHAIN.
+ MODULE USER_COMMAND_0100.
+```
+</br>
+
+**3) `PAI` 에서 모듈 생성**
+```abap
+" 단일입력
+MODULE check_input INPUT.
+  IF SCARR-CARRID IS NOT INITIAL.
+    SELECT SINGLE CARRID
+      FROM SPFLI " 여기엔 AB값이 없음
+      INTO SCARR-CARRID
+      WHERE CARRID = SCARR-CARRID.
+    IF sy-subrc <> 0.
+      MESSAGE '해당 항공사 데이터는 존재하지 않습니다.' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+
+" 다중입력
+MODULE check_inputs INPUT.
+  IF SDYN_CONN-CARRID IS NOT INITIAL AND
+     SDYN_CONN-CONNID IS NOT INITIAL.
+    SELECT SINGLE *
+      FROM SPFLI
+      INTO CORRESPONDING FIELDS OF SDYN_CONN
+      WHERE CARRID = SDYN_CONN-CARRID
+        AND CONNID = SDYN_CONN-CONNID.
+    IF sy-subrc <> 0.
+      MESSAGE '해당 항공사의 항공편이 존재하지 않습니다.' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+```
 
 </br>
 </br>
