Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -258,9 +258,15 @@ ENDMODULE.
 
 ---
 
-</ br>
+</br>
 
 ## < 실습 코드 >
+</br>
 
 ### 실습 1
+</br>
+
+- 문제
+  
+<img width="445" height="225" alt="image" src="https://github.com/user-attachments/assets/64038eae-eb24-46ab-9a1f-a283a997be7c" />
 
