Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -207,6 +207,7 @@ ENDMODULE.
 
 ## < AT EXIT-COMMAND >
 - **`AT EXIT-COMMAND`** 은 무조건 **PAI** 에서만 구현
+- `AT EXIT-COMMAND` 는 Screen 코드에서 맨 위에 두는 게 좋음
 - PF-STATUS에서 Function Type = E(Exit) 로 정의된 커맨드만 대상으로 동작함
 - 메시지 E로 화면 진행이 막힌 상태에서, 사용자가 “종료”를 선택했을 때 빠져나가기 위한 용도
 </br>
@@ -276,3 +277,6 @@ ENDMODULE.
 **1) `Layout` 설정**
 
 <img width="282" height="256" alt="image" src="https://github.com/user-attachments/assets/752bef5c-f436-4598-8335-657595f20b67" />
+</br>
+
+**2) `Screen` 코드에서 모듈 생성 ( PAI, PBO )**
