Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -281,3 +281,102 @@ ENDMODULE.
 </br>
 
 **2) `Screen` 코드에서 모듈 생성 ( PAI, PBO )**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE CLEAR_OK_CODE.
+*
+PROCESS AFTER INPUT.
+ MODULE EXIT AT EXIT-COMMAND.
+ CHAIN.
+  FIELD: SDYN_BOOK-CARRID, SDYN_BOOK-CONNID, SDYN_BOOK-FLDATE,
+SDYN_BOOK-BOOKID.
+  MODULE CHECK_INPUTS ON CHAIN-REQUEST.
+ ENDCHAIN.
+ MODULE USER_COMMAND_0100.
+```
+</br>
+
+**3) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZPRACTICE05B03_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT' OR 'CANCEL'.
+      LEAVE PROGRAM.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  CHECK_INPUTS  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE check_inputs INPUT.
+  IF SDYN_BOOK-CARRID IS NOT INITIAL AND
+     SDYN_BOOK-CONNID IS NOT INITIAL AND
+     SDYN_BOOK-FLDATE IS NOT INITIAL AND
+     SDYN_BOOK-BOOKID IS NOT INITIAL.
+    SELECT SINGLE CANCELLED FROM SBOOK
+      INTO gv_cancelled
+      WHERE carrid = SDYN_BOOK-CARRID
+        AND connid = SDYN_BOOK-CONNID
+        AND fldate = SDYN_BOOK-FLDATE
+        AND bookid = SDYN_BOOK-BOOKID.
+    SELECT SINGLE carrid connid fldate bookid CUSTOMID CUSTTYPE FROM SBOOK
+      INTO CORRESPONDING FIELDS OF gs_data
+      WHERE carrid = SDYN_BOOK-CARRID
+        AND connid = SDYN_BOOK-CONNID
+        AND fldate = SDYN_BOOK-FLDATE
+        AND bookid = SDYN_BOOK-BOOKID.
+
+    IF gv_cancelled = 'X'.
+      MESSAGE '항공편 예약이 취소된 건 입니다.' TYPE 'E'.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  EXIT  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE EXIT INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**4) `PBO` 모듈 생성**
+<img width="536" height="186" alt="image" src="https://github.com/user-attachments/assets/d8623302-5ef3-45b0-b053-ce9d166d5cc1" />
+</br>
+</br>
+
+```abap
+MODULE status_0100 OUTPUT.
+  SET PF-STATUS 'S100'.
+  MOVE-CORRESPONDING gs_data TO SDYN_BOOK.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module CLEAR_OK_CODE OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE clear_ok_code OUTPUT.
+  CLEAR: OK_CODE.
+ENDMODULE.
+```
