Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -362,6 +362,7 @@ ENDMODULE.
 </br>
 
 **4) `PBO` 모듈 생성**
+
 <img width="536" height="186" alt="image" src="https://github.com/user-attachments/assets/d8623302-5ef3-45b0-b053-ce9d166d5cc1" />
 </br>
 </br>
@@ -380,3 +381,17 @@ MODULE clear_ok_code OUTPUT.
   CLEAR: OK_CODE.
 ENDMODULE.
 ```
+</br>
+
+**5) 결과 확인**
+- CANCELLED 가 `X` 일 때
+
+<img width="289" height="258" alt="image" src="https://github.com/user-attachments/assets/ad495b9a-3564-4de0-80be-5a8bed2ddd53" />
+</br>
+</br>
+
+- CANCELLED 가 `X` 가 아닐 때
+
+<img width="280" height="257" alt="image" src="https://github.com/user-attachments/assets/f31a0317-f737-4867-8f4d-b54428c2f1e5" />
+</br>
+</br>
