Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -646,3 +646,117 @@ ENDMODULE.
 </br>
 </br>
 </br>
+
+**2) 100 Screen 모듈 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE CLEAR_OK_CODE.
+*
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+```
+</br>
+</br>
+
+**3) `F01` 모듈 생성**
+```abap
+FORM set_icons USING icon_name CHANGING icon_result.
+  CALL FUNCTION 'ICON_CREATE'
+    EXPORTING
+      name                        = icon_name
+    IMPORTING
+      RESULT                      = icon_result
+    EXCEPTIONS
+      ICON_NOT_FOUND              = 1
+      OUTPUTFIELD_TOO_SHORT       = 2
+      OTHERS                      = 3
+             .
+    IF sy-subrc <> 0.
+      MESSAGE 'Error' TYPE 'E'.
+    ENDIF.
+ENDFORM.
+```
+</br>
+</br>
+
+**4) `TOP` 모듈 생성**
+```abap
+PROGRAM SAPMZPRACTICE04B03.
+
+TABLES: SDYN_CONN, SFLIGHT.
+
+DATA: OK_CODE TYPE sy-ucomm,
+      ICONFIELD01 TYPE ICONS-TEXT,
+      gs_spfli TYPE SPFLI,
+      gs_sflight TYPE sflight,
+      gv_subrc TYPE I,
+      gv_max_fldate TYPE S_DATE,
+      gv_remain_seat TYPE INT4.
+```
+</br>
+</br>
+
+**5) `PAI` 모듈 생성**
+```abap
+MODULE user_command_0100 INPUT.
+  IF OK_CODE = 'BTN01'.
+    SELECT SINGLE * FROM SPFLI
+      INTO CORRESPONDING FIELDS OF gs_spfli
+      WHERE carrid = SDYN_CONN-carrid
+        AND connid = SDYN_CONN-connid.
+    IF sy-subrc <> 0.
+      MESSAGE '일치하는 데이터가 없습니다.' TYPE 'I'.
+    ELSE.
+      SELECT MAX( fldate ) FROM sflight
+        INTO gv_max_fldate
+        WHERE carrid = SDYN_CONN-carrid
+          AND connid = SDYN_CONN-connid.
+
+      SELECT SINGLE * FROM sflight
+        INTO gs_sflight
+        WHERE fldate = gv_max_fldate.
+
+      gv_remain_seat = gs_sflight-SEATSMAX - gs_sflight-SEATSOCC.
+
+      IF gv_remain_seat = 0.
+        gv_subrc = 1.
+      ELSEIF gv_remain_seat >= 10.
+        gv_subrc = 2.
+      ELSEIF gv_remain_seat < 10.
+        gv_subrc = 3.
+      ENDIF.
+
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+```
+</br>
+</br>
+
+**6) `PBO` 모듈 생성**
+```abap
+MODULE status_0100 OUTPUT.
+  MOVE-CORRESPONDING gs_sflight TO SFLIGHT.
+  IF gv_subrc = 3.
+    PERFORM set_icons USING 'ICON_LED_YELLOW' CHANGING ICONFIELD01.
+  ELSEIF gv_subrc = 2.
+    PERFORM set_icons USING 'ICON_LED_RED' CHANGING ICONFIELD01.
+  ELSEIF gv_subrc = 1.
+    PERFORM set_icons USING 'ICON_LED_GREEN' CHANGING ICONFIELD01.
+  ENDIF.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE clear_ok_code OUTPUT.
+  CLEAR: OK_CODE.
+ENDMODULE.
+```
+</br>
+</br>
+
+**7) 결과 확인**
+- 
+
+<img width="567" height="292" alt="image" src="https://github.com/user-attachments/assets/ff6f0c7c-a3a4-440f-b7e2-2cc87cdefd7b" />
