Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -639,6 +639,14 @@ ENDMODULE.
 ### 실습 3
 </br>
 
+- 문제
+<img width="370" height="211" alt="image" src="https://github.com/user-attachments/assets/b718816c-c7b8-4164-b521-3fb326df95fc" />
+</br>
+</br>
+</br>
+</br>
+
+
 **1) Screen 100 `Layout` 설정**
 
 <img width="537" height="275" alt="image" src="https://github.com/user-attachments/assets/21e4e168-07c9-478a-a864-f2f762d419d5" />
