Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -765,6 +765,6 @@ ENDMODULE.
 </br>
 
 **7) 결과 확인**
-- 
+- 잔여석이 0 이면 초록색, 10 이상이면 빨간색, 10 미만이면 노란색
 
 <img width="567" height="292" alt="image" src="https://github.com/user-attachments/assets/ff6f0c7c-a3a4-440f-b7e2-2cc87cdefd7b" />
