--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -105,6 +105,17 @@ MESSAGE 'E타입 메세지입니다.' TYPE 'E' DISPLAY LIKE 'S'.
 </br>
 </br>
 </br>
+
+### < 추가적인 개념 - `SET / GET PARAMETER` >
+- 서로 다른 프로그램/화면 간에 입력값을 공유하기 위한 기능
+- Data Element에 설정된 Parameter ID를 키로 사용
+- 한 프로그램에서 SET으로 저장한 값을 다른 프로그램에서 GET으로 불러옴
+
+<img width="403" height="307" alt="image" src="https://github.com/user-attachments/assets/c9dd3121-2741-4b8e-b90a-99c251864cae" />
+
+</br>
+</br>
+</br>
 </br>
 
 ---
