Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -261,6 +261,42 @@ ENDMODULE.
 
 </br>
 
+## < 추가적인 기능 >
+- **`PAI` 에 있는 모듈들은 순차적으로 실행됨**
+<img width="525" height="363" alt="image" src="https://github.com/user-attachments/assets/fb5f10f3-4de3-41cc-884e-4ea875403676" />
+</br>
+</br>
+</br>
+</br>
+
+### SWITCH ( TCODE : `SFW5` ) 기반 MODULE 호출
+- SWITCH는 스위치가 ON일 때만 MODULE을 실행하는 제어 장치
+- PAI에서 조건부로 로직을 활성/비활성하기 위해 사용
+```abap
+PROCESS AFTER INPUT.
+  MODULE <module_name> SWITCH <switch_name>.
+```
+```abap
+PROCESS AFTER INPUT.
+  MODULE add_check SWITCH sw_bc410.
+```
+- `PAI` 모듈 코드
+```abap
+MODULE add_check INPUT.
+  CASE ok_code.
+    WHEN 'ADD_FUNCTION'.
+      " 기능 처리
+  ENDCASE.
+ENDMODULE.
+```
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
 </br>
 
