Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -292,6 +292,17 @@ MODULE add_check INPUT.
   ENDCASE.
 ENDMODULE.
 ```
+</br>
+</br>
+
+### `SET / GET PARAMETER`
+- 서로 다른 프로그램/화면 간에 입력값을 공유하기 위한 기능
+- Data Element에 설정된 Parameter ID를 키로 사용
+- 한 프로그램에서 SET으로 저장한 값을 다른 프로그램에서 GET으로 불러옴
+
+<img width="433" height="330" alt="image" src="https://github.com/user-attachments/assets/2092cfa6-8af8-403b-b2e8-4b55492a8c7d" />
+
+
 
 </br>
 </br>
