Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -272,7 +272,7 @@ ENDMODULE.
 </br>
 </br>
 
-### SWITCH ( TCODE : `SFW5` ) 기반 MODULE 호출
+### `SWITCH` ( TCODE : `SFW5` ) 기반 MODULE 호출
 - SWITCH는 스위치가 ON일 때만 MODULE을 실행하는 제어 장치
 - PAI에서 조건부로 로직을 활성/비활성하기 위해 사용
 ```abap
@@ -302,8 +302,8 @@ ENDMODULE.
 
 <img width="433" height="330" alt="image" src="https://github.com/user-attachments/assets/2092cfa6-8af8-403b-b2e8-4b55492a8c7d" />
 
-
-
+</br>
+</br>
 </br>
 </br>
 
