Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -319,6 +319,9 @@ ENDMODULE.
   
   - 오류 발생 등으로 진행이 불가능할 때 사용
   - 현재 처리를 취소하고 이전 상태로 복귀
+
+<img width="550" height="377" alt="image" src="https://github.com/user-attachments/assets/1b0e6a46-aec0-4a37-b379-d4190f733c21" />
+
 </br>
 </br>
 </br>
