Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -307,21 +307,20 @@ ENDMODULE.
 </br>
 
 ### 종료(Function) 버튼 색상별 의미
-- 🟢 Back (뒤로가기)
+- **🟢 Back (뒤로가기)**
 
   - 일반적인 화면 이동용 버튼
   - 이전 화면으로 돌아가며 프로그램은 종료되지 않음
-- 🟡 Exit (노란색)
+- **🟡 Exit (노란색)**
 
   - 현재 프로그램을 완전히 종료
   - SAP Easy Access(초기 화면)로 이동
-- 🔴 Cancel (빨간색)
+- **🔴 Cancel (빨간색)**
   
   - 오류 발생 등으로 진행이 불가능할 때 사용
   - 현재 처리를 취소하고 이전 상태로 복귀
 
 <img width="550" height="377" alt="image" src="https://github.com/user-attachments/assets/1b0e6a46-aec0-4a37-b379-d4190f733c21" />
-</br>
 </br>
 </br>
 </br>
