Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -367,7 +367,24 @@ SDYN_BOOK-BOOKID.
 ```
 </br>
 
-**3) `PAI` 모듈 생성**
+
+**3) `TOP` 모듈 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE CLEAR_OK_CODE.
+*
+PROCESS AFTER INPUT.
+ MODULE EXIT AT EXIT-COMMAND.
+ CHAIN.
+  FIELD: SDYN_BOOK-CARRID, SDYN_BOOK-CONNID, SDYN_BOOK-FLDATE, SDYN_BOOK-BOOKID.
+  MODULE CHECK_INPUTS ON CHAIN-REQUEST.
+ ENDCHAIN.
+ MODULE USER_COMMAND_0100.
+```
+</br>
+
+**4) `PAI` 모듈 생성**
 ```abap
 MODULE check_inputs INPUT.
   IF SDYN_BOOK-CARRID IS NOT INITIAL AND
@@ -417,7 +434,7 @@ ENDMODULE.
 ```
 </br>
 
-**4) `PBO` 모듈 생성**
+**5) `PBO` 모듈 생성**
 
 <img width="536" height="186" alt="image" src="https://github.com/user-attachments/assets/d8623302-5ef3-45b0-b053-ce9d166d5cc1" />
 </br>
@@ -437,7 +454,7 @@ ENDMODULE.
 ```
 </br>
 
-**5) 결과 확인**
+**6) 결과 확인**
 - CANCELLED 가 `X` 일 때
 
 <img width="289" height="258" alt="image" src="https://github.com/user-attachments/assets/ad495b9a-3564-4de0-80be-5a8bed2ddd53" />
