Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -14,6 +14,7 @@
 - LOOP AT SCREEN 사용시 **`MODIFY SCREEN`** 넣기
 - **`FIELD / CHAIN`** 은 무조건 **PAI** 에서만 구현
 - **`AT EXIT-COMMAND`** 은 무조건 **PAI** 에서만 구현
+- **`AT EXIT-COMMAND`** 는 Screen 코드에서 **맨 위** 에 두는 게 좋음
 
 </br>
 
