Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -262,6 +262,36 @@ ENDMODULE.
 
 </br>
 
+## < 종료(Function) 버튼 로직 >
+- **🟢 Back (뒤로가기)**
+
+  - 일반적인 화면 이동용 버튼
+  - 이전 화면으로 돌아가며 프로그램은 종료되지 않음
+- **🟡 Exit (노란색)**
+
+  - 현재 프로그램을 완전히 종료
+  - SAP Easy Access(초기 화면)로 이동
+- **🔴 Cancel (빨간색)**
+  
+  - 오류 발생 등으로 진행이 불가능할 때 사용
+  - 현재 처리를 취소하고 이전 상태로 복귀
+
+<img width="550" height="377" alt="image" src="https://github.com/user-attachments/assets/1b0e6a46-aec0-4a37-b379-d4190f733c21" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### < `Back` 예제 >
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 추가적인 기능 >
 
 </br>
@@ -302,27 +332,6 @@ ENDMODULE.
 - 한 프로그램에서 SET으로 저장한 값을 다른 프로그램에서 GET으로 불러옴
 
 <img width="433" height="330" alt="image" src="https://github.com/user-attachments/assets/2092cfa6-8af8-403b-b2e8-4b55492a8c7d" />
-</br>
-</br>
-</br>
-</br>
-
-### 종료(Function) 버튼 색상별 의미
-- **🟢 Back (뒤로가기)**
-
-  - 일반적인 화면 이동용 버튼
-  - 이전 화면으로 돌아가며 프로그램은 종료되지 않음
-- **🟡 Exit (노란색)**
-
-  - 현재 프로그램을 완전히 종료
-  - SAP Easy Access(초기 화면)로 이동
-- **🔴 Cancel (빨간색)**
-  
-  - 오류 발생 등으로 진행이 불가능할 때 사용
-  - 현재 처리를 취소하고 이전 상태로 복귀
-
-<img width="550" height="377" alt="image" src="https://github.com/user-attachments/assets/1b0e6a46-aec0-4a37-b379-d4190f733c21" />
-</br>
 </br>
 </br>
 </br>
